Closed Bug 488468 Opened 17 years ago Closed 17 years ago

qcms build break with pre-4 GCCs

Categories

(Core :: Graphics: Color Management, defect)

All
OS/2
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mozilla, Assigned: mozilla)

References

Details

(Keywords: fixed1.9.1)

Attachments

(1 file, 1 obsolete file)

Attached patch fix (obsolete) — Splinter Review
There is an #if 0 -- #endif block in qcms/qcmsint.h that breaks the build on GCC 3.3 with a "missing terminating ' character" warning. The trivial fix is to C- or C++-style comment the #if0-commented comment... (Or maybe that block can now be fully removed.)
Attachment #372850 - Flags: review?(jmuizelaar)
Attached patch fix v2Splinter Review
There is another one of those in nsJPEGDecoder...
Attachment #372850 - Attachment is obsolete: true
Attachment #372851 - Flags: review?(jmuizelaar)
Attachment #372850 - Flags: review?(jmuizelaar)
Jeff, should I ask somebody else for review -- or even check in as build-break fix unreviewed (as this only touches commented code)?
When asking someone a question one should also CC him...
Attachment #372851 - Flags: review?(jmuizelaar) → review+
Comment on attachment 372851 [details] [diff] [review] fix v2 I'd prefer the comment text to start on the same line as the comment. e.g. /* this is from ... Other than that this looks fine.
Pushed with that change to mozilla-central: http://hg.mozilla.org/mozilla-central/rev/f083055d319a
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Keywords: fixed1.9.1
Version: 1.9.1 Branch → Trunk
Assignee: nobody → mozilla
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: