Bug 488468: qcms build break with pre-4 GCCs (#if 0 commented text should be C/C++ commented), r=jmuizelaar